--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 dependencies:
   flutter: {sdk: flutter}
   cupertino_icons: ^1.0.8
+  flame: ^1.29.0
 
 dev_dependencies:
   flutter_lints: ^5.0.0
